ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
  generation: 1
  labels:
  name: webduino-smart-house-ingress
  namespace: ethan
spec:
  rules:
  - host: webduino.ethan.ensaas.en.internal
    http:
      paths:
      - backend:
          serviceName: webduino-smart-house-service
          servicePort: 5000
        path: /
